@@ -71,7 +71,8 @@ function AppConfig(eventBus) {
 
     // Filter appConfig to only have whitelisted properties. (Don't allow a local
     // app to overwrite runAs, for instance).
-    appConfig = _.pick(appConfig, 'appDefaults', 'scheduler');
+    appConfig = _.pick(appConfig, 'appDefaults', 'scheduler',
+        'frame_options');
 
     baseConfig.settings = merge(appConfig, baseConfig.settings);
 
