@@ -265,6 +265,11 @@ function ShinyProxy(router, schedulerRegistry) {
     proxy.on('proxyRes', function(proxyRes, req, res) {
       res.proxySuccess = proxyRes.statusCode && proxyRes.statusCode >= 200 && proxyRes.statusCode < 300;
       res.setHeader("connection", req.keepalive ? 'keep-alive' : 'close');
+      // Protect against clickjacking
+      var frameOptions = appWorkerHandle.appSpec.settings.appDefaults.frameOptions;
+      if (frameOptions) {
+        res.setHeader("x-frame-options", frameOptions);
+      }
     });
 
     proxy.on('error', function(err, req, res) {
